--- a/src/component/Keranjang/Keranjang.css
+++ b/src/component/Keranjang/Keranjang.css
@@ -83,7 +83,8 @@
 }
 .btn-tambah-keterangan:hover,
 .delete-all:hover,
-.bayar .btn-bayar:hover {
+.bayar .btn-bayar:hover,
+.btn-hapus-semua:hover {
   background-color: rgb(63, 61, 61);
   color: white;
 }
@@ -100,7 +101,19 @@
   width: 100%;
   transition: 0.5s;
 }
-
+.btn-tambah-meja {
+  background-color: black;
+  color: white;
+  border: none;
+  padding: 7px 10px;
+  font-weight: bold;
+  font-size: 14px;
+  border-radius: 3px;
+  cursor: pointer;
+  margin-top: 10px;
+  width: 100%;
+  transition: 0.5s;
+}
 .keranjang-keterangan {
   font-size: 14px;
   margin-top: 5px;
@@ -132,4 +145,41 @@
   margin-top: 10px;
   width: 100%;
   transition: 0.5s;
+}
+
+.nomor-meja-button.active {
+  background-color: red;
+  color: white;
+}
+
+.nomor-meja-button {
+  outline-style: none;
+  border: none;
+  background-color: #dc3545;
+  margin: 2px;
+
+  margin-bottom: 10px;
+  border-radius: 5px;
+  padding: 5px;
+}
+
+.btn-hapus-semua {
+  background-color: #dc3545;
+  color: white;
+  border: none;
+  padding: 7px 10px;
+  font-weight: bold;
+  font-size: 14px;
+  border-radius: 3px;
+  cursor: pointer;
+  margin-top: 10px;
+  width: 100%;
+  transition: 0.5s;
+}
+
+.keranjang-total-harga {
+  display: flex;
+  justify-content: center;
+  font-size: 25px;
+  margin-top: 2rem;
 }
