--- a/src/component/Keranjang/Keranjang.css
+++ b/src/component/Keranjang/Keranjang.css
@@ -69,18 +69,6 @@
   margin-bottom: 0.5rem;
 }
 
-.delete-all {
-  background-color: #dc3545;
-  color: white;
-  border: none;
-  padding: 5px 10px;
-  font-weight: bold;
-  font-size: 14px;
-  border-radius: 3px;
-  cursor: pointer;
-  width: 100%;
-  transition: 0.5s;
-}
 .btn-tambah-keterangan:hover,
 .delete-all:hover,
 .bayar .btn-bayar:hover,
@@ -98,7 +86,20 @@
   border-radius: 3px;
   cursor: pointer;
   margin-top: 10px;
-  width: 100%;
+  width: 50%;
+  transition: 0.5s;
+}
+.delete-all {
+  background-color: #dc3545;
+  color: white;
+  border: none;
+  padding: 7px 10px;
+  font-weight: bold;
+  font-size: 14px;
+  border-radius: 3px;
+  cursor: pointer;
+  margin-top: 10px;
+  width: 50%;
   transition: 0.5s;
 }
 .btn-tambah-meja {
@@ -148,7 +149,7 @@
 }
 
 .nomor-meja-button.active {
-  background-color: red;
+  background-color: #007bff;
   color: white;
 }
 
@@ -160,7 +161,8 @@
 
   margin-bottom: 10px;
   border-radius: 5px;
-  padding: 5px;
+  padding: 5px 10px;
+  font-family: monospace;
 }
 
 .btn-hapus-semua {
@@ -182,4 +184,10 @@
   justify-content: center;
   font-size: 25px;
   margin-top: 2rem;
+}
+
+.kumpulan-btn {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
 }
